Alignment issue in sub-menu

--- a/Web/form-creation/css/styles.css
+++ b/Web/form-creation/css/styles.css
@@ -289,7 +289,7 @@ tr:hover { background: rgb(255, 252, 209) }
 #page-header img {
     margin-left: 10px;
     margin-right: 15px;
-    padding-bottom: 15px;
+    padding-bottom: 30px;
     width: 50px;
 }
 
@@ -297,6 +297,7 @@ tr:hover { background: rgb(255, 252, 209) }
     background-color:rgb(41,51,58);
     color:white;
     padding: 20px;
+    padding-bottom: 0px;
 }
 
 #quick-search {
@@ -314,5 +315,8 @@ tr:hover { background: rgb(255, 252, 209) }
 
 #breadcrumbs p{
     display: inline-block;
+}
 
+#link-splitter {
+    padding-left: 10px;
 }
